[fix]: Keyboard background doesn't match page background color in dark mode

--- a/src/components/Keyboard/styles.css
+++ b/src/components/Keyboard/styles.css
@@ -1,6 +1,6 @@
 .hg-theme-default {
     font-weight: 800;
-    background-color: black;
+    background-color: inherit;
     margin-top: 0.5em;
     width: 170%;
 }
